--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "repository": "git@github.com:rianadon/opensprinkler-card.git",
   "license": "Apache-2.0",
   "dependencies": {
+    "@formatjs/intl-utils": "^3.8.4",
     "@mdi/js": "^6.5.95",
-    "custom-card-helpers": "^1.9.0",
-    "home-assistant-js-websocket": "^6.0.1",
+    "custom-card-helpers": "1.8.0",
+    "home-assistant-js-websocket": "^5.12.0",
     "lit": "^2.0.2",
     "lovelace-timer-bar-card": "^1.15.0"
   },
