Ping ``lovelace-timer-bar-card` to 1.17
v1.17 is the last version of timer-bar-card that is compatible with this
code:

- v1.18 includes
  https://github.com/rianadon/timer-bar-card/commit/372af471b6a803654068654deaaadb33c6205ee5,
  which introduces problematic imports (I've send a PR to fix that
  https://github.com/rianadon/timer-bar-card/pull/224)
- v1.28 includes
  https://github.com/rianadon/timer-bar-card/commit/d736984595d194f3528eea202e535bedb9f80bab#diff-372af471b6a803654068654deaaadb33c6205ee5
  which stopped exporting the `localize` function, which we depend on. I
  filed https://github.com/rianadon/timer-bar-card/issues/225 upstream
  to ask about that.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "custom-card-helpers": "1.8.0",
     "home-assistant-js-websocket": "^5.12.0",
     "lit": "^2.0.2",
-    "lovelace-timer-bar-card": "^1.15.0"
+    "lovelace-timer-bar-card": "1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
